--- a/src/index.css
+++ b/src/index.css
@@ -72,3 +72,18 @@ body {
   border: 1px solid #eaeaea;
   border-radius: 4px;
 }
+
+.checkbox-cell {
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+}
+
+.ag-theme-alpine .ag-checkbox-input-wrapper {
+    width: 16px !important;
+    height: 16px !important;
+    border: 1px solid var(--ag-checkbox-border-color) !important;
+    border-radius: var(--ag-checkbox-border-radius) !important;
+    display: inline-block !important;
+    position: relative !important;
+}
